--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -7,7 +7,7 @@
                         <h3>More Tools</h3>
                         <ul class="list-unstyled tools">
                             <li><a href="http://lono.cloud">Lono</a></li>
-                            <li><a href="http://jackandtheelasticbeanstalk.com">Jack</a></li>
+                            <li><a href="http://jack-eb.com">Jack</a></li>
                             <li><a href="https://boltops.com/toolbelt">Toolbelt</a></li>
                         </ul>
                     </div>
