add database migrations docs

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -34,6 +34,7 @@
         </li>
         <li><a href="{% link _docs/ufo-settings.md %}">Settings</a></li>
         <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
+        <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
         <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
         <li><a href="{% link articles.md %}">Articles</a></li>
     </ul>
