update readme to mainly link to the official docs

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -13,7 +13,7 @@
                 <li><a href="{% link _docs/tutorial-ufo-docker-build.md %}">Build Docker</a></li>
                 <li><a href="{% link _docs/tutorial-ufo-tasks-build.md %}">Task Definitions</a></li>
                 <li><a href="{% link _docs/tutorial-ufo-ship.md %}">Deploy One App</a></li>
-                <li><a href="{% link _docs/tutorial-ufo-ships.md %}">Deploy Apps</a></li>
+                <li><a href="{% link _docs/tutorial-ufo-ships.md %}">Deploy Multiple Apps</a></li>
             </ul>
         </li>
         <li><a href="{% link _docs/commands.md %}">Commands</a>
@@ -32,9 +32,13 @@
                 <li><a href="{% link _docs/ufo-help.md %}">ufo help</a></li>
             </ul>
         </li>
-        <li><a href="{% link _docs/ufo-settings.md %}">Settings</a></li>
+        <li><a href="{% link _docs/settings.md %}">Settings</a></li>
+        <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
         <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
+        <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
+        <li><a href="{% link _docs/single-task.md %}">Run Single Task</a></li>
         <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
+        <li><a href="{% link _docs/automated-cleanup.md %}">Automated Cleanup</a></li>
         <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
         <li><a href="{% link articles.md %}">Articles</a></li>
     </ul>
