--- a/docs/_includes/contact.html
+++ b/docs/_includes/contact.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <a href="{% link quick-start.md %}" class="btn btn-primary btn-xl">Quick Start</a>
+                <a id="next" href="{% link quick-start.md %}" class="btn btn-primary btn-xl">Quick Start</a>
             </div>
         </div>
     </div>
