--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/img/ufo.jpg" alt="">
+                    <img class="img-responsive" src="/img/logos/ufo-logo.png" alt="">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
