shared variabled support, intro UFO_ENV concept
* also added new settings mapping based on the UFO_ENV concept

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -33,6 +33,8 @@
             </ul>
         </li>
         <li><a href="{% link _docs/settings.md %}">Settings</a></li>
+        <li><a href="{% link _docs/ufo-env.md %}">UFO_ENV</a></li>
+        <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
         <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
         <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
         <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
