--- a/lib/template/.ufo/settings.yml.tt
+++ b/lib/template/.ufo/settings.yml.tt
@@ -1,18 +1,23 @@
 # More info: http://ufoships.com/docs/ufo-settings/
-image: <%= @image %>
-# clean_keep: 30
-# ecr_keep: 30
+base: &base
+  image: <%= @image %>
+  # clean_keep: 30
+  # ecr_keep: 30
+  # defaults when an new ECS service is created by ufo ship
+  new_service:
+    maximum_percent: 200
+    minimum_healthy_percent: 100
+    desired_count: 1
 
-# aws_profile_ufo_env_map:
-#   default: staging
-#   # More examples:
-#   aws_profile1: production
-#   aws_profile2: staging
-#   aws_profile3: development
+development:
+  <<: *base
+  cluster: dev
+  profiles:
+    - aws_dev_profile1
+    - aws_dev_profile2
 
-# ufo_env_cluster_map:
-#   default: prod
-#   # More examples:
-#   production: prod
-#   staging: stag
-#   development: dev
+production:
+  <<: *base
+  cluster: prod
+  profiles:
+    - aws_prod_profile
