--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -24,6 +24,7 @@
                 <li><a href="{% link _docs/ufo-scale.md %}">ufo scale</a></li>
                 <li><a href="{% link _docs/ufo-destroy.md %}">ufo destroy</a></li>
                 <li><a href="{% link _docs/ufo-docker-build.md %}">ufo docker build</a></li>
+                <li><a href="{% link _docs/ufo-docker-push.md %}">ufo docker push</a></li>
                 <li><a href="{% link _docs/ufo-docker-base.md %}">ufo docker base</a></li>
                 <li><a href="{% link _docs/ufo-docker-name.md %}">ufo docker name</a></li>
                 <li><a href="{% link _docs/ufo-docker-clean.md %}">ufo docker clean</a></li>
