--- a/lib/template/.ufo/settings.yml.tt
+++ b/lib/template/.ufo/settings.yml.tt
@@ -1,8 +1,8 @@
 # More info: http://ufoships.com/docs/ufo-settings/
 base: &base
   image: <%= @image %>
-  # clean_keep: 30
-  # ecr_keep: 30
+  # clean_keep: 30 # cleans up docker images on your docker server.
+  # ecr_keep: 30 # cleans up images on ECR and keeps this remaining amount. Defaults to keep all.
   # defaults when an new ECS service is created by ufo ship
   new_service:
     maximum_percent: 200
@@ -11,13 +11,18 @@ base: &base
 
 development:
   <<: *base
-  cluster: dev
-  aws_profiles:
-    - dev_profile1
-    - dev_profile2
+  # cluster: dev # uncomment if you want the cluster name be other than the default
+                 # the default is to match UFO_ENV.  So UFO_ENV=development means the ECS
+                 # cluster will be name development
+  # When you have AWS_PROFILE set to one of these values, ufo will switch to the desired
+  # environment. This prevents you from switching AWS_PROFILE, forgetting to
+  # also switch UFO_ENV, and accidentally deploying to production vs development.
+  # aws_profiles:
+  #   - dev_profile1
+  #   - dev_profile2
 
 production:
   <<: *base
-  cluster: prod
-  aws_profiles:
-    - prod_profile
+  # cluster: prod
+  # aws_profiles:
+  #   - prod_profile
