--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -21,6 +21,7 @@
                 <li><a href="{% link _docs/ufo-init.md %}">ufo init</a></li>
                 <li><a href="{% link _docs/ufo-ship.md %}">ufo ship</a></li>
                 <li><a href="{% link _docs/ufo-ships.md %}">ufo ships</a></li>
+                <li><a href="{% link _docs/ufo-deploy.md %}">ufo deploy</a></li>
                 <li><a href="{% link _docs/ufo-scale.md %}">ufo scale</a></li>
                 <li><a href="{% link _docs/ufo-destroy.md %}">ufo destroy</a></li>
                 <li><a href="{% link _docs/ufo-docker-build.md %}">ufo docker build</a></li>
