--- a/docs/_includes/summary.html
+++ b/docs/_includes/summary.html
@@ -12,8 +12,8 @@
 
               <ol class="landing-summary">
                 <li>Builds a docker image.</li>
-                <li>Generates and registers the ECS template definition.</li>
-                <li>Deploys the ECS template definition to the ECS service.</li>
+                <li>Registers the ECS template definition.</li>
+                <li>Deploys to ECS.</li>
               </ol>
             </div>
         </div>
