add docs about auto-completion

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -39,6 +39,7 @@
         <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
         <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
         <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
+        <li><a href="{% link _docs/auto-completion.md %}">Auto-Completion</a></li>
         <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
         <li><a href="{% link _docs/single-task.md %}">Run Single Task</a></li>
         <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
