--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -1,12 +1,7 @@
 <div class="col-md-3 content-nav">
     <ul>
         <li><a href="{% link quick-start.md %}">Quick Start</a></li>
-        <li><a href="{% link docs.md %}">Docs</a>
-            <ul>
-                <li><a href="{% link _docs/install.md %}">Installation</a></li>
-                <li><a href="{% link _docs/structure.md %}">Structure</a></li>
-            </ul>
-        </li>
+        <li><a href="{% link _docs/install.md %}">Installation</a></li>
         <li><a href="{% link _docs/tutorial.md %}">Tutorial</a>
             <ul class="tutorial">
                 <li><a href="{% link _docs/tutorial-ufo-init.md %}">Setup Ufo</a></li>
@@ -14,6 +9,24 @@
                 <li><a href="{% link _docs/tutorial-ufo-tasks-build.md %}">Task Definitions</a></li>
                 <li><a href="{% link _docs/tutorial-ufo-ship.md %}">Deploy One App</a></li>
                 <li><a href="{% link _docs/tutorial-ufo-ships.md %}">Deploy Multiple Apps</a></li>
+            </ul>
+        </li>
+        <li><a href="{% link docs.md %}">Docs</a>
+            <ul>
+                <li><a href="{% link _docs/structure.md %}">Structure</a></li>
+                <li><a href="{% link _docs/settings.md %}">Settings</a></li>
+                <li><a href="{% link _docs/ufo-env.md %}">UFO_ENV</a></li>
+                <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
+                <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
+                <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
+                <li><a href="{% link _docs/auto-completion.md %}">Auto-Completion</a></li>
+                <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
+                <li><a href="{% link _docs/single-task.md %}">Run Single Task</a></li>
+                <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
+                <li><a href="{% link _docs/automated-cleanup.md %}">Automated Cleanup</a></li>
+                <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
+                <li><a href="{% link articles.md %}">Articles</a></li>
+                <li><a href="{% link reference.md %}">Reference</a></li>
             </ul>
         </li>
         <li><a href="{% link _docs/commands.md %}">Commands</a>
@@ -34,17 +47,5 @@
                 <li><a href="{% link _docs/ufo-help.md %}">ufo help</a></li>
             </ul>
         </li>
-        <li><a href="{% link _docs/settings.md %}">Settings</a></li>
-        <li><a href="{% link _docs/ufo-env.md %}">UFO_ENV</a></li>
-        <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
-        <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
-        <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
-        <li><a href="{% link _docs/auto-completion.md %}">Auto-Completion</a></li>
-        <li><a href="{% link _docs/run-in-pieces.md %}">Run In Pieces</a></li>
-        <li><a href="{% link _docs/single-task.md %}">Run Single Task</a></li>
-        <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
-        <li><a href="{% link _docs/automated-cleanup.md %}">Automated Cleanup</a></li>
-        <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
-        <li><a href="{% link articles.md %}">Articles</a></li>
     </ul>
 </div>
