update cli desc

--- a/docs/_includes/css/main.css
+++ b/docs/_includes/css/main.css
@@ -493,3 +493,8 @@ footer .footer-below {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
 }
+
+.reference-nav {
+    margin-bottom: 20px;
+}
+
