fix starter template name

--- a/lib/template/.ufo/templates/main.json.erb
+++ b/lib/template/.ufo/templates/main.json.erb
@@ -2,7 +2,7 @@
   "family": "<%= @family %>",
   "containerDefinitions": [
     {
-      "name2": "<%= @name %>",
+      "name": "<%= @name %>",
       "image": "<%= @image %>",
       "cpu": <%= @cpu %>,
       <% if @memory %>
