tasks register: prompt for execution role for fargate when necessary

--- a/lib/template/.ufo/templates/fargate.json.erb
+++ b/lib/template/.ufo/templates/fargate.json.erb
@@ -2,6 +2,7 @@
   "family": "<%= @family %>",
   "requiresCompatibilities": ["FARGATE"],
   "networkMode": "awsvpc",
+  "executionRoleArn": "<%= @execution_role_arn %>",
   "cpu": "<%= @cpu %>",
   "memory": "<%= @memory %>",
   "containerDefinitions": [
