add params docs

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="{% link _docs/structure.md %}">Structure</a></li>
                 <li><a href="{% link _docs/settings.md %}">Settings</a></li>
+                <li><a href="{% link _docs/params.md %}">Params</a></li>
                 <li><a href="{% link _docs/ufo-env.md %}">UFO_ENV</a></li>
                 <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
                 <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
