--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -26,6 +26,7 @@
                 <li><a href="{% link _docs/migrations.md %}">Database Migrations</a></li>
                 <li><a href="{% link _docs/automated-cleanup.md %}">Automated Cleanup</a></li>
                 <li><a href="{% link _docs/next-steps.md %}">Next Steps</a></li>
+                <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
                 <li><a href="{% link articles.md %}">Articles</a></li>
                 <li><a href="{% link reference.md %}">Reference</a></li>
             </ul>
