wip: show equivalent cli commands

--- a/lib/template/.ufo/templates/main.json.erb
+++ b/lib/template/.ufo/templates/main.json.erb
@@ -14,7 +14,7 @@
       <% if @container_port %>
       "portMappings": [
         {
-          "containerPort": "<%= @container_port %>",
+          "containerPort": <%= @container_port %>,
           "protocol": "tcp"
         }
       ],
