--- a/lib/template/.ufo/templates/fargate.json.erb
+++ b/lib/template/.ufo/templates/fargate.json.erb
@@ -12,7 +12,7 @@
       <% if @container_port %>
       "portMappings": [
         {
-          "containerPort": "<%= @container_port %>",
+          "containerPort": <%= @container_port %>,
           "protocol": "tcp"
         }
       ],
