remove helper support for params files. erb still works.
* so its going to be either remove support for helper support in
params.
* or remove the task_definition_name in the TemplateScope and then it
wont be accessible from variables files.
* right now think this is the more common use case that we'd rather have
access to the task_definition name in the variables files.

--- a/lib/template/.ufo/params.yml.tt
+++ b/lib/template/.ufo/params.yml.tt
@@ -1,5 +1,5 @@
 <%%
-  # replace with actual values:
+  # replace with actual values if using fargate
   @subnets = ["subnet-111","subnet-222"]
   @security_groups = ["sg-111"]
 %>
