--- a/lib/template/.ufo/params.yml.tt
+++ b/lib/template/.ufo/params.yml.tt
@@ -1,8 +1,10 @@
 <%%
   # Default values provided, replace to fit your needs.
   # These settings are required for fargate.
+  # Note: I noticed that the network settings don't get applied unless you destroy and
+  # recreate the service.
   @subnets = <%= @options[:subnets].inspect %>
-  @security_groups = <%= @fargate_security_groups.inspect %>
+  @security_groups = <%= @fargate_security_groups.inspect %> # auto is special value that tells ufo to create a security group automatically. Useful when using fargate or awsvpc mode.
 %>
 # These params are passsed to the corresponding aws-sdk ecs client methods.
 # AWS Docs example: https://docs.aws.amazon.com/sdk-for-ruby/v3/api/Aws/ECS/Client.html#run_task-instance_method
@@ -65,3 +67,4 @@ run_task:
   #     security_groups: <%%= @security_groups.inspect %>
   #     assign_public_ip: "ENABLED" # accepts ENABLED, DISABLED
 <% end -%>
+
