--- a/lib/template/.ufo/settings/network/default.yml.tt
+++ b/lib/template/.ufo/settings/network/default.yml.tt
@@ -14,13 +14,41 @@ vpc: <%= @options[:vpc_id] %>
 #   - sg-ccc
 
 elb:
-  port: 80
-  protocol: http
-  # certificate: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
+  scheme: internet-facing
 
-# When using SSL and 443, the target group protocol is usually http still.
-# This is because for most apps SSL termination is handled at the ELB and the app
-# serves regular http.  This is not always the case but is usually common.
+# https://docs.aws.amazon.com/fr_fr/elasticloadbalancing/latest/APIReference/API_CreateTargetGroup.html
+#
+# When using SSL with network elb, the target group protocol is usually http still
+# unless you also handle SSL termination at the app level.
 target_group:
-  port: 80 # doesnt matter with ECS
-  protocol: http
+  port: 80 # not needed with ECS
+  # protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP
+                  # ufo sets defaults in cloudformation template
+                  #   application elb: HTTP
+                  #   network elb: TCP
+                  # so we can keep this commented out, unless we need HTTPS at the app level
+  target_group_attributes:
+  - key: deregistration_delay.timeout_seconds
+    value: 0
+  # network elb support health_check_interval_seconds of 10 or 30
+  # health_check_interval_seconds: 30
+
+  # health check settings are supported by application load balancer:
+  # health_check_path: /
+  # health_check_port: traffic-port
+  # unhealthy_threshold_count: 10
+
+# https://docs.aws.amazon.com/fr_fr/elasticloadbalancing/latest/APIReference/API_CreateListener.html
+#
+# If HTTPS and SSL is required this is where it would normally be set. Application ELBs
+# support SSL termination. Network laod balancers do not.
+listener:
+  port: 80 # required by ufo, used in cloudformation template
+  # For Application Load Balancers, the supported protocols are HTTP and HTTPS. For Network Load Balancers, the supported protocol is TCP.
+  # protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP
+                  # ufo sets defaults in cloudformation template
+                  #   application elb: HTTP
+                  #   network elb: TCP
+                  # so we can keep this commented out, unless we need HTTPS at elb level
+  # certificates:
+  # - certificate: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
