updating docs: wip

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -30,6 +30,11 @@
                 <li><a href="{% link _docs/faq.md %}">FAQ</a></li>
                 <li><a href="{% link articles.md %}">Articles</a></li>
                 <li><a href="{% link reference.md %}">Reference</a></li>
+
+                <li><a href="{% link _docs/route53-support.md %}">Route53 Support</a></li>
+                <li><a href="{% link _docs/cloudformation-stack.md %}">CloudFormation Stack</a></li>
+                <li><a href="{% link _docs/ufo-env-extra.md %}">UFO_ENV_EXTRA</a></li>
+                <li><a href="{% link _docs/settings-network.md %}">Settings Network</a></li>
             </ul>
         </li>
     </ul>
