upgrade v3to4 and separate elb_subnets and ecs_subnets settings

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -35,6 +35,7 @@
                 <li><a href="{% link _docs/cloudformation-stack.md %}">CloudFormation Stack</a></li>
                 <li><a href="{% link _docs/ufo-env-extra.md %}">UFO_ENV_EXTRA</a></li>
                 <li><a href="{% link _docs/settings-network.md %}">Settings Network</a></li>
+                <li><a href="{% link _docs/ufo-current.md %}">Current Setting</a></li>
             </ul>
         </li>
     </ul>
